<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button8"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="onPinTwoMan"
        android:text="@string/win_by_pin"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/pin_point_save_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475"
        tools:text="@string/win_by_pin" />

    <TextView
        android:id="@+id/display_wrestler_weightclass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="480dp"
        android:text="@string/enter_weight_class"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backToHomeFromAdminOption3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backToHomeFromAdminOption3"
        android:layout_width="70dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="273dp"
        android:layout_marginRight="273dp"
        android:layout_marginBottom="616dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="showWrestlerAdder"
        android:text="@string/back_button"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/finalist1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="278dp"
        android:layout_marginRight="278dp"
        android:layout_marginBottom="100dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="selectChampionTwoMan"
        android:text="@string/finalist"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/finalist11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/finalist11"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="278dp"
        android:layout_marginRight="278dp"
        android:layout_marginBottom="215dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="selectChampionTwoMan2"
        android:text="@string/finalist"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalist1" />

    <Button
        android:id="@+id/finalist"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="219dp"
        android:layout_marginLeft="219dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="104dp"
        android:layout_marginBottom="280dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/school1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="300dp"
        android:layout_marginRight="300dp"
        android:layout_marginBottom="10dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/grade1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalist1" />

    <TextView
        android:id="@+id/grade1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="300dp"
        android:layout_marginRight="300dp"
        android:layout_marginBottom="200dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/school1" />

    <TextView
        android:id="@+id/school2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="300dp"
        android:layout_marginRight="300dp"
        android:layout_marginBottom="10dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/grade2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalist11" />

    <TextView
        android:id="@+id/grade2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="300dp"
        android:layout_marginRight="300dp"
        android:layout_marginBottom="30dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/school2" />

    <TextView
        android:id="@+id/school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="219dp"
        android:layout_marginLeft="219dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="133dp"
        android:layout_marginRight="133dp"
        android:layout_marginBottom="10dp"
        android:text='""'
        app:layout_constraintBottom_toTopOf="@+id/grade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalist" />

    <TextView
        android:id="@+id/grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="219dp"
        android:layout_marginLeft="219dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="133dp"
        android:layout_marginRight="133dp"
        android:layout_marginBottom="110dp"
        android:text='""'
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/school" />

    <Button
        android:id="@+id/button7"
        android:layout_width="45dp"
        android:layout_height="20dp"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="onPointsTwoMan"
        android:text="@string/win_by_points"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/pin_point_save_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475"
        tools:text="@string/win_by_points" />

    <Button
        android:id="@+id/button9"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginTop="134dp"
        android:layout_marginBottom="347dp"
        android:background="@color/colorSaveButton"
        android:onClick="onSaveTwoMan"
        android:text="@string/save_results"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/pin_point_save_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/display_wrestler_weightclass"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/save_results" />

</android.support.constraint.ConstraintLayout>